--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -998,5 +998,169 @@
     pages={86}
     }
 
+@article{gr1885bzb,
+    author={Gruber, A.},
+    title={Ueber künstliche Theilung bei Infusorien.},
+    year={1885},
+    journal={Biol. Centralbl.},
+    volume={4},
+    number={23},
+    pages={717},
+    url={http://www.biodiversitylibrary.org/page/1585525}
+    }
+
+@article{gr1886bzb,
+    author={Gruber, A.},
+    title={Ueber künstliche Theilung bei Infusorien. 2. Mittheilung},
+    year={1886},
+    journal={Biol. Centralbl.},
+    volume={5},
+    number={5},
+    pages={137},
+    url={http://www.biodiversitylibrary.org/page/1776730}
+    }
+
+@article{gu1884as,
+    author={Guignard},
+    title={Recherches sur la structure et la division du noyau cellulaire.},
+    year={1884},
+    journal={Ann. Sci. nat. Zool.},
+    volume={17},
+    series={6},
+    }
+
+@book{ha1869,
+    author={Haeckel, E.},
+    title={Zur Entwicklungsgeschichte der Siphonophoren},
+    year={1869},
+    publisher={C. van der Post, jr.},
+    address={Utrecht},
+    url={http://openlibrary.org/works/OL368461W}
+    }
+
+@book{hs1880,
+    author={Hanstein, J.},
+    title={Das Protoplasma},
+    year={1880},
+    publisher={Winter},
+    address={Heidelberg},
+    url={http://openlibrary.org/works/OL16420984W}
+    }
+
+@phdthesis{hh1872diss,
+    author={Heidenhain, B.},
+    title={Ueber die Verfettung fremder Körper in der
+Bauchhöhle},
+    year={1872},
+    address={Breslau},
+    }
+
+@article{he1876zae,
+    author={Hensen, V.},
+    title={Beobachtungen über die Befruchtung und Entwicklung des Kaninchens und Meerschweinchens.},
+    year={1876},
+    journal={Z. Anat. Entw.-Gesch.},
+    volume={1},
+    pages={213},
+    url={http://www.biodiversitylibrary.org/page/31371028}
+    }
+
+@book{he1881,
+    author={Hensen, V.},
+    title={Physiologie der Zeugung},
+    year={1881},
+    series={Handbuch der Physiologie der Ernährung und Fortpflanzung. 2 Handbuch der Physiologie},
+    editor={Hermann, L.},
+    volume={6},
+    url={http://openlibrary.org/works/OL16421008W}
+    }
+
+@article{he1885lj,
+    author={Hensen, V.},
+    title={Die Grundlagen der Vererbung nach dem gegenwärtigen Wissenskreis.},
+    year={1885},
+    journal={Landwirtsch. Jahrb.},
+    editor={Thiel, H.},
+    pages={746},
+    url={http://hdl.handle.net/2027/uc1.b3242554}
+    }
+
+@article{hy1882cr,
+    author={Henneguy, L.F.},
+    title={Division des cellules embryonnaires chez les Vertébrés.},
+    year={1882},
+    journal={Compt. rend.},
+    volume={94},
+    pages={655},
+    url={http://gallica.bnf.fr/ark:/12148/bpt6k3050z/f657.image}
+    }
+
+@proceedings{hy1882ass,
+    author={Henneguy, L.F.},
+    title={Note sur la division cellulaire ou cytodiérèse.},
+    year={1882},
+    organization={Assoc. franc. pour l'avancem. des Sciences},
+    address={La Rochelle},
+    month={30. aout}
+    }
+
+@article{hwo1875mj,
+    author={Hertwig, O.},
+    title={Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies.},
+    year={1876},
+    journal={Morphol. Jahrb.},
+    volume={1},
+    pages={347},
+    url={http://www.biodiversitylibrary.org/page/13842588}
+    }
+
+@article{hwo1876mj,
+    author={Hertwig, O.},
+    title={Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies. Zweiter Theil.},
+    year={1876},
+    journal={Morphol. Jahrb.},
+    volume={3},
+    pages={1},
+    url={http://www.biodiversitylibrary.org/page/13008834}
+    }
+
+@article{hwo1877mj,
+    author={Hertwig, O.},
+    title={Weitere Beiträge zur Kenntniss der Bildung, Befruchtung und Theilung des thierischen Eies.},
+    year={1877},
+    journal={Morphol. Jahrb.},
+    volume={3},
+    pages={271},
+    url={http://www.biodiversitylibrary.org/page/13009095}
+    }
+
+@article{hwr1877jzn,
+    author={Hertwig, R.},
+    title={Ueber den Bau und die Entwicklung der Spirochona gemmipara.},
+    year={1877},
+    journal={Jenaische Zeitschr. f. Naturwiss.},
+    volume={11},
+    pages={149},
+    url={http://www.biodiversitylibrary.org/page/28986016}
+    }
+
+@article{hwr1884jzn,
+    author={Hertwig, R.},
+    title={Ueber die Kerntheilung bei Aktinosphaerium Eichhorni.},
+    year={1884},
+    journal={Jenaische Zeitschr. f. Naturwiss.},
+    volume={17},
+    pages={490},
+    url={http://www.biodiversitylibrary.org/page/8543331}
+    }
+
+@book{hwr1887,
+    author={Hertwig, O. und R.},
+    title={Ueber den Befruchtungs- und Theilungs-Vorgang des thierischen Eies},
+    year={1887},
+    publisher={G. Fischer},
+    address={Jena},
+    url={http://openlibrary.org/works/OL15017339W}
+    }
 
 
