--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -1163,4 +1163,64 @@ Bauchhöhle},
     url={http://openlibrary.org/works/OL15017339W}
     }
 
+@article{hs1884bz,
+    author={Heuser, E.},
+    title={Beobachtungen über Zellkerntheilung.},
+    year={1884},
+    volume={17},
+    number={1},
+    pages={27},
+    note={pp. 57-59; 85-95; 117-128; 154-156},
+    url={http://www.biodiversitylibrary.org/page/7174346}
+    }
+
+@book{his1873,
+    author={His, W.},
+    title={Untersuchungen über das Ei und die Eientwicklung bei Knochenfischen},
+    year={1873},
+    publisher={F.C.W. Vogel},
+    address={Leipzig},
+    url={http://openlibrary.org/works/OL15242377W}
+    }
+
+@book{hf1881,
+    author={Hoffmann, Christiaan Karel},
+    title={Zur Ontogenie der Knochenfische},
+    year={1881},
+    publisher={Johannes Müller},
+    editor={Koninkl. Akad. van Wetenschapen, Amsterdam},
+    url={http://openlibrary.org/works/OL16424423W}
+    }
+
+@article{ih1878vt,
+    author={v. Ihering},
+    title={Befruchtung und Furchung des thierischen Eies.},
+    year={1878},
+    journal={Vorträge für Tierärzte},
+    number={1},
+    volume={4}
+    }
+
+@article{jo1881bz,
+    author={Johow, Fr.},
+    title={Die Zellkerne von Chara foetida.},
+    year={1881},
+    journal={Botan. Ztg.},
+    volume={39},
+    pages={729},
+    note={p. 745},
+    url={http://www.biodiversitylibrary.org/page/33806683}
+    }
+
+@article{kl1870cbm,
+    author={Klein, E.},
+    title={Ueber Theilung farbloser Blutkörperchen.},
+    year={1870},
+    journal={Centralblatt f. d. med. Wissenschaften},
+    volume={2},
+    pages={17}
+    }
+
+
+
 
