--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -1167,6 +1167,7 @@ Bauchhöhle},
     author={Heuser, E.},
     title={Beobachtungen über Zellkerntheilung.},
     year={1884},
+    journal={Botan. Centralbl.},
     volume={17},
     number={1},
     pages={27},
@@ -1212,7 +1213,7 @@ Bauchhöhle},
     url={http://www.biodiversitylibrary.org/page/33806683}
     }
 
-@article{kl1870cbm,
+@article{kn1870cbm,
     author={Klein, E.},
     title={Ueber Theilung farbloser Blutkörperchen.},
     year={1870},
@@ -1221,6 +1222,149 @@ Bauchhöhle},
     pages={17}
     }
 
+@article{kn1878qj,
+    author={Klein, E.},
+    title={Observations on cells and nuclei.},
+    year={1878},
+    journal={Quarterly journal of microscopical science},
+    volume={18},
+    note={vol. 19, p. 125.}
+    }
 
+@article{kn1879cmw,
+    author={Klein, E.},
+    title={Ein Beitrag zur Kenntniss der Structur des Zellkerns.},
+    year={1879},
+    journal={Centralblatt f. d. med. Wissenschaften},
+    volume={17}
+    }
+
+@book{kb1872,
+    author={Kleinenberg, N.},
+    title={Hydra. Eine anatomisch-entwicklungsgeschichtliche Untersuchung},
+    year={1872},
+    publisher={Engelmann},
+    address={Leipzig},
+    url={http://openlibrary.org/works/OL12464141W}
+    }
+
+@book{kb1878,
+    author={Kleinenberg, N.},
+    title={Sullo sviluppo del "lumbricus trapezoides"},
+    year={1878},
+    publisher={Detken e Rocholi},
+    address={Napoli},
+    url={http://openlibrary.org/works/OL16444616W}
+    }
+
+@book{kl1853,
+    author={Kölliker, A.},
+    title={Die Schwimmpolypen oder Siphonophoren von Messina},
+    year={1853},
+    publisher={Engelmann},
+    address={Leipzig},
+    url={http://openlibrary.org/works/OL7708356W}
+    }
+
+@book{kl1882,
+    author={Kölliker, A.},
+    title={Die Entwicklung der Keimblätter des Kaninchens},
+    year={1882},
+    publisher={F.C.W. Vogel},
+    address={Leipzig},
+    note={S. bes. Seite 37/38.},
+    url={http://openlibrary.org/works/OL16444619W}
+    }
+
+@article{kl1886zwz,
+    author={Kölliker, A.},
+    title={Die Bedeutung der Zellkerne für die Vorgänge der Vererbung.},
+    year={1886},
+    journal={Z. wiss. Zool.},
+    volume={42}
+    }
+
+@article{ko1883ama,
+    author={Koganeï, J.},
+    title={Untersuchungen über die Histiogenese der Retina.},
+    year={1883},
+    journal={Arch. f. mikr. Anat.},
+    volume={23},
+    pages={335-357},
+    doi={10.1007/BF02952314}
+    }
+
+@book{km1883,
+    author={Kollmann, A.},
+    title={Der Tastapparat der Hand der menschlichen Rassen und der Affen in seiner Entwickelung und Gliederung},
+    year={1883},
+    publisher={Voss},
+    address={Leipzig},
+    url={http://openlibrary.org/works/OL13181545W}
+    }
+
+@article{ks1884zpc,
+    author={Kossel, A.},
+    title={Ueber einen peptonartigen Bestandtheil des Zellkerns.},
+    year={1884},
+    volume={8},
+    number={6}
+    }
+
+@article{ks1883zpc,
+    author={Kossel, A.},
+    title={Beiträge zur Chemie des Zellkerns.},
+    year={1883},
+    volume={7},
+    note={Ibid. Bd. X, p. 248. 1886.}
+    }
+
+@article{ks1885bcg,
+    author={Kossel, A.},
+    title={Ueber eine neue Base aus dem Thierkörper.},
+    year={1885},
+    journal={Ber. dt. chem. Ges.},
+    volume={18},
+    number={1},
+    pages={79-81},
+    doi={10.1002/cber.18850180119}
+    }
+
+@book{kw1871,
+    author={Kovalevskiĭ, A.O.},
+    title={Embryologische Studien an Würmern und
+Arthropoden.},
+    year={1871},
+    series={Mém. Acad. Sci. St. Petersbourg. 7ème serie},
+    volume={16},
+    number={12},
+    note={(S. 13, Taf. IV Fig. 24)},
+    url={http://openlibrary.org/works/OL16444623W}
+    }
+
+@article{ku1887ama,
+    author={Kultschitzky, N.},
+    title={Die Befruchtungsvorgänge bei Ascaris megalocephala.},
+    year={1888},
+    journal={Arch. mikr. Anat.},
+    volume={31},
+    number={1},
+    pages={567-93},
+    doi={10.1007/BF02955721}
+    }
+
+@article{ku1888sbp,
+    author={Kultschitzky, N.},
+    title={Ergebnisse einer Untersuchung über Befruchtungs-Vorgänge bei Ascaris megalocephala.},
+    year={1888},
+    journal={Sitzungsb. K. Preuss. Acad. Wiss.},
+    number={2},
+    month={19 Jan}
+    }
+
+@book{kb1878,
+    author={Kupffer, C. und Benecke, B.},
+    title={Der Vorgang der Befruchtung am Ei der Neunaugen},
+    year={1878},
 
 
