--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -733,7 +733,9 @@
 	title={Die erste Entwicklung des Geryoniden-Eies.},
 	year={1873},
 	journal={Jenaische Zeitschrift für Med. und Naturwiss.},
-	volume={7}
+	volume={7},
+        pages={471},
+        url={http://www.archive.org/details/jenaischezeitsc24jenagoog}
 }
 
 @article{fol1875az,
@@ -1307,6 +1309,7 @@ Bauchhöhle},
     author={Kossel, A.},
     title={Ueber einen peptonartigen Bestandtheil des Zellkerns.},
     year={1884},
+    journal={Z. physiol. Chemie},
     volume={8},
     number={6}
     }
@@ -1315,6 +1318,7 @@ Bauchhöhle},
     author={Kossel, A.},
     title={Beiträge zur Chemie des Zellkerns.},
     year={1883},
+    journal={Z. physiol. Chemie},
     volume={7},
     note={Ibid. Bd. X, p. 248. 1886.}
     }
@@ -1358,13 +1362,254 @@ Arthropoden.},
     title={Ergebnisse einer Untersuchung über Befruchtungs-Vorgänge bei Ascaris megalocephala.},
     year={1888},
     journal={Sitzungsb. K. Preuss. Acad. Wiss.},
-    number={2},
+    number={1},
     month={19 Jan}
+    pages={17},
+    url={http://bibliothek.bbaw.de/bibliothek-digital/digitalequellen/schriften/anzeige/index_html?band=10-sitz/1888-1&seite:int=32}
     }
 
 @book{kb1878,
     author={Kupffer, C. und Benecke, B.},
     title={Der Vorgang der Befruchtung am Ei der Neunaugen},
     year={1878},
+    publisher={Hartung},
+    address={Königsberg},
+    url={http://openlibrary.org/works/OL16445414W}
+    }
+
+@article{kf1878bcm,
+    author={Kupffer, C.},
+    title={Laichen und Entwicklung des Ostseehärings.},
+    year={1878},
+    journal={Jahresbericht der Commission zur wissenschaftl. Untersuchung der deutschen Meere},
+    url={http://www.biodiversitylibrary.org/bibliography/44913}
+    }
+
+@article{kf1882sbm,
+    author={Kupffer, C.},
+    title={Die Betheiligung des Dotters am Befruchtungsacte.},
+    year={1882},
+    journal={Sitzgsb. der math.-phys. Klasse d. Königl. Bayr. Akad. d. Wissensch. zu München},
+    volume={6}
+    }
+
+@article{kf1886bfz,
+    author={Kupffer, C.},
+    title={Die Befruchtung des Forellen-Eies.},
+    year={1886},
+    journal={Bay. Fischerei-Zeitung},
+    volume={11},
+    pages={2},
+    url={http://www.biodiversitylibrary.org/page/4080979}
+    }
+
+@article{lv1886ama,
+    author={La Valette-St. George, A.},
+    title={Spermatologische Beiträge II.},
+    year={1886},
+    journal={Arch. mikrosk. Anat.},
+    volume={27},
+    pages={1},
+    url={http://www.biodiversitylibrary.org/page/13992607}
+    }
+
+@inbook{lv1887,
+    author={La Valette-St. George, A.},
+    title={Zelltheilung und Samenbildung bei Forficula auricularia},
+    booktitle={Festschrift, Albert von Kölliker zur Feier seines siebenzigsten Geburtstages, gewidmet von seinen Schülern},
+    year={1887},
+    publisher={Engelmann},
+    address={Leipzig}
+    }
+
+@article{la1884va,
+    author={Lavdowsky, M.},
+    title={Mikroskopische Untersuchungen einiger Lebensvorgänge des Blutes.},
+    year={1884},
+    journal={Arch. path. Anat.},
+    volume={96},
+    number={1},
+    pages={60-100},
+    doi={10.1007/BF02361569}
+    }
+
+@article{le1849zwz,
+    author={Leydig, Fr.},
+    title={Zur Anatomie von Piscicola geometrica mit theilweiser Vergleichung anderer einheimischer Hirudineen.},
+    year={1849},
+    journal={Zeitschr. wiss. Zool.},
+    volume={1},
+    pages={103},
+    url={http://www.biodiversitylibrary.org/page/13849356}
+    }
+
+@article{le1855zwz,
+    author={Leydig, Fr.},
+    title={,Ueber den Bau und die systematische Stellung der Räderthiere.},
+    year={1855},
+    journal={Zeitschr. wiss. Zool.},
+    volume={6},
+    number={1},
+    pages={1},
+    url={http://www.biodiversitylibrary.org/page/13861523}
+    }
+
+@book{le1885,
+    author={Leydig, Franz},
+    title={Zelle und Gewebe: neue Beiträge zur Histologie des Thierkörpers},
+    year={1885},
+    publisher={Strauss},
+    address={Bonn},
+    url={http://openlibrary.org/works/OL15230089W}
+    }
+
+@article{lo1885sbw,
+    author={Löwit, M.},
+    title={Ueber Neubildung und Zerfall weisser Blutkörperchen.},
+    year={1885},
+    journal={Sitzber. math.-naturw. Cl. kais. Akad. Wiss. Wien},
+    volume={92},
+    }
+
+@article{lo1848aap,
+    author={Lovén},
+    title={Ueber die Entwicklung der kopflosen Mollusken.},
+    year={1848},
+    journal={Arch. Anatom. Physiol.},
+    pages={531}
+    }
+
+@article{lu1887aap,
+    author={Lukjanow, S. M.},
+    title={Beiträge zur Morphologie der Zelle.},
+    year={1887},
+    journal={Arch. Anatom. Physiol.},
+    pages={66}
+    }
+
+@article{lu1887aap2,
+    author={Lukjanow, S. M.},
+    title={Beiträge zur Morphologie der Zelle. II. Ueber die Kerne der platten Muskelzellen bei Salamandra maculata.},
+    year={1887},
+    journal={Arch. Anatom. Physiol.},
+    volume={30},
+    pages={545}
+    }
+
+@article{mk1881bmh,
+    author={Mark, E. L.},
+    title={Maturation, fecundation and segmentation of Limax campestris, Binney.},
+    year={1881},
+    journal={Bull. Museum Comp. Zool. Harvard Cam.},
+    volume={6},
+    number={12},
+    pages={173},
+    url={http://www.biodiversitylibrary.org/page/31068862}
+    }
+
+@article{ma1881va,
+    author={Martin, W. A.},
+    title={Zur Kenntniss der indirecten Kerntheilung.},
+    year={1881},
+    journal={Arch. pathol. Anat.},
+    volume={86},
+    number={1},
+    pages={57},
+    doi={10.1007/BF01942597}
+    }
+
+@article{ma1875cbm,
+    author={Mayzel, W.},
+    title={Ueber eigenthümliche Vorgänge bei der Theilung der Kerne in Epithelzellen.},
+    year={1875},
+    journal={Centralblatt für die medic. Wiss., Berlin},
+    number={50}
+    }
+
+@article{ma1877cbm,
+    author={Mayzel, W.},
+    title={Beiträge zur Lehre von dem Theilungsvorgange des Zellkerns.},
+    year={1877},
+    journal={Centralblatt für die medic. Wiss., Berlin},
+    note={Nro. 11 und Nro. 44.}
+    }
+
+@article{ma1879za,
+    author={Mayzel, W.},
+    title={Ueber die Vorgänge bei der Segmentation des Eies von Würmern (Nematoden) und Schnecken.},
+    year={1879},
+    journal={Zool. Anz.},
+    volume={2},
+    pages={280},
+    url={http://www.biodiversitylibrary.org/page/9736391}
+    }
+
+@inbook{ma1884,
+    author={Mayzel, W.},
+    title={O Karyjomitozie.},
+    booktitle={Festschrift zu Ehren Hoyer's},
+    address={Warschau},
+    year={1884},
+    pages={531}
+    }
+
+@article{me1885sbw,
+    author={Merk, L.},
+    title={Ueber die Anordnung der Kerntheilungsfiguren im
+Centralnervensystem und der Retina bei Natterembryonen.},
+    year={1885},
+    journal={Sitzber. Wiener Akad., III. Abth.}
+    month={October}
+    }
+
+@article{me1887lc,
+    author={Meunier, A.},
+    title={Le nucléole des Spirogyra.},
+    year={1887},
+    journal={La Cellule},
+    volume={3},
+    pages={333}
+    }
+
+@article{mi1874vnb,
+    author={Miescher, F.},
+    title={Die Spermatozoen einiger Wirbelthiere. Ein Beitrag zur Histochemie.},
+    year={1874},
+    journal={Verhandlungen der Naturforschenden Gesellschaft in Basel},
+    volume={6},
+    pages={138},
+    note={Auch als Separatdruck.},
+    url={http://www.biodiversitylibrary.org/page/11539182}
+    }
+
+@article{mi1882bc,
+    author={Minot, Ch.},
+    title={Theorie der Gonoblasten.},
+    year={1882},
+    journal={Biol. Centrbl.},
+    volume={2},
+    pages={385},
+    note={S. auch: Proceedings Boston Soc. Nat. Hist. XIX, 1877. S. 165 und American naturalist, Febr. 1880, S. 96.},
+    url={http://www.biodiversitylibrary.org/page/1579952}
+    }
+
+@article{mo1887sbb,
+    author={Möbius, K.},
+    title={Directe Theilung des Kerns bei der Quertheilung von Euplotes harpa Stn.},
+    year={1887},
+    journal={Sitzungsberichte der Gesellschaft Naturforschender Freunde zu Berlin},
+    pages={102},
+    url={http://www.biodiversitylibrary.org/page/7795360}
+    }
+
+@book{mo1845,
+    author={von Mohl, Hugo},
+    title={Vermischte Schriften botanischen Inhalts},
+    year={1845},
+    publisher={L.F. Fues},
+    address={Tübingen},
+    note={Beobachtung, 1835 angestellt an Conferva glomerata.},
+    url={http://openlibrary.org/works/OL5227998W}
+    }
 
 
