--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -1612,4 +1612,172 @@ Centralnervensystem und der Retina bei Natterembryonen.},
     url={http://openlibrary.org/works/OL5227998W}
     }
 
+@article{ml1848afn,
+    author={Müller, F.},
+    title={Zur Kenntniss des Furchungsprocesses im Schneckeneie.},
+    year={1848},
+    journal={Arch. f. Naturgesch.},
+    volume={14},
+    pages={1},
+    url={http://www.biodiversitylibrary.org/page/6923105}
+    }
+
+@article{ml1852aap,
+    author={Müller, J.},
+    title={Ueber die Erzeugung von Schnecken in Holotrurien.},
+    year={1852},
+    journal={Arch. Anatom. Physiol.},
+    pages={1},
+    note={(speciell S. 19)}
+    url={http://www.biodiversitylibrary.org/page/14316645}
+    }
+
+@article{mu1858zwz,
+    author={Munk, H.},
+    title={Ueber Ei- und Samenbildung und Befruchtung bei den Nematoden.},
+    year={1858},
+    journal={Zeitschr. wiss. Zool.},
+    volume={9},
+    pages={365},
+    url={http://www.biodiversitylibrary.org/page/13863696}
+    }
+
+@book{na1884,
+    author={Nägeli, Carl},
+    title={Mechanisch-physiologische Theorie der Abstammungslehre},
+    year={1884},
+    publisher={R. Oldenbourg},
+    url={http://openlibrary.org/works/OL10707650W}
+    }
+
+@article{ni1886ama,
+    author={Nissen, F.},
+    title={Ueber das Verhalten der Kerne in den Milchdrüsenzellen bei der Absonderung.},
+    year={1886},
+    journal={Arch. mikr. Anat.},
+    volume={26},
+    pages={337},
+    url={http://www.biodiversitylibrary.org/page/14003122}
+    }
+
+@article{nu1880ama,
+    author={Nussbaum, M.},
+    title={Zur Differenzirung des Geschlechts im Thierreich.},
+    year={1880},
+    journal={Arch. mikr. Anat.},
+    volume={18},
+    pages={1},
+    url={http://www.biodiversitylibrary.org/page/13986229}
+    }
+
+@article{nu1886ama,
+    author={Nussbaum, M.},
+    title={Ueber die Theilbarkeit der lebendigen Materie. I.Die spontane und künstliche Theilung der Infusorien.},
+    year={1886},
+    journal={Arch. mikr. Anat.},
+    volume={26},
+    pages={485},
+    note={(speciell S. 525 ff.)}
+    url={http://www.biodiversitylibrary.org/page/14003270}
+    }
+
+@article{nu1884ama,
+    author={Nussbaum, M.},
+    title={Ueber die Veränderungen der Geschlechtsproducte bis zur Eifurchung; ein Beitrag zur Lehre von der Vererbung.},
+    year={1884},
+    journal={Arch. mikr. Anat.},
+    volume={23},
+    pages={155},
+    url={http://www.biodiversitylibrary.org/page/13804995}
+    }
+
+@article{nu1883sbo,
+    author={Nussbaum, M.},
+    title={Askaris und Leptodera.},
+    year={1883},
+    journal={Sitzb. d. Niederrh. Ges. f. Natur- u. Heilkunde Bonn},
+    month={5. August}
+    }
+
+@article{oe1872ama,
+    author={Oellacher, J.},
+    title={Beiträge zur Geschichte des Keimbläschens im Wirbelthiereie.},
+    year={1872},
+    journal={Arch. mikr. Anat.},
+    volume={8},
+    pages={1},
+    url={http://www.biodiversitylibrary.org/page/13280043}
+    }
+
+@article{og1883aap,
+    author={Ogata, Masanori},
+    title={Die Veränderungen der Pankreaszellen bei der Sekretion.},
+    year={1883},
+    journal={Arch. Anat. Physiol.},
+    }
+
+@article{ov1885ama,
+    author={Overlach, M.},
+    title={Die pseudomenstruirende Mucosa uteri nach acuter Phosphorvergiftung.},
+    year={1885},
+    journal={Arch. mikr. Anat.},
+    volume={25},
+    pages={191},
+    url={http://www.biodiversitylibrary.org/page/14010188}
+    }
+
+@article{pf1881mj,
+    author={Pfitzner, W.},
+    title={Ueber den feineren Bau der bei der Zelltheilung auftretenden fadenförmigen Differenzirung des Zellkerns.},
+    year={1881},
+    journal={Morphol. Jahrb.},
+    volume={7},
+    pages={289},
+    url={http://www.biodiversitylibrary.org/page/13091292}
+    }
+
+@article{pf1883ama,
+    author={Pfitzner, W.},
+    title={Beiträge zur Lehre vom Baue des Zellkerns und seinen Theilungserscheinungen.},
+    year={1883},
+    journal={Arch. mikr. Anat.},
+    volume={22},
+    pages={616},
+    url={http://www.biodiversitylibrary.org/page/13896412}
+    }
+
+@article{pf1886va,
+    author={Pfitzner, W.},
+    title={Zur pathologischen Anatomie des Zellkerns.},
+    year={1886},
+    journal={Arch, pathol. Anat.},
+    volume={103},
+    number={2},
+    pages={275},
+    doi={10.1007/BF01938679}
+    }
+
+@article{pf1886mj1,
+    author={Pfitzner, W.},
+    title={Zur Kenntniss der Zelltheilung bei den Protozoen.},
+    year={1886},
+    journal={Morph. Jahrb.},
+    volume={11},
+    pages={454},
+    url={http://www.biodiversitylibrary.org/page/13052822}
+    }
+
+@article{pf1886mj2,
+    author={Pfitzner, W.},
+    title={Zur morphologischen Bedeutung des Zellkerns.},
+    year={1886},
+    journal={Morph. Jahrb.},
+    volume={11},
+    pages={54},
+    url={http://www.biodiversitylibrary.org/page/13052380}
+    }
+
+
+
+
 
