--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -505,7 +505,7 @@
 	year={1878},
 	journal={Zeitschrift für wiss. Zoologie},
 	volume={30},
-	pages={436ff},
+	pages={436},
 }
 
 @article{cjb1884lac,
@@ -514,7 +514,8 @@
 	year={1884},
 	journal={La cellule. Recueil de Cytologie et d'histologie générale},
 	volume={1},
-	pages={191ff}
+	pages={191},
+    url={http://www.biodiversitylibrary.org/page/7499904}
 }
 
 @article{cjb1885lac,
@@ -523,7 +524,8 @@
 	year={1885},
 	journal={La cellule. Recueil de Cytologie et d'histologie générale},
 	volume={2},
-	pages={1ff}
+	pages={1},
+    url={http://www.biodiversitylibrary.org/page/6924365}
 }
 
 @article{cjb1886lac,
@@ -531,7 +533,9 @@
 	title={La cytodiérèse chez quelques Nématodes.},
 	year={1886},
 	journal={La cellule. Recueil de Cytologie et d'histologie générale},
-	volume={3}
+	volume={3},
+    pages={1},
+    url={http://www.biodiversitylibrary.org/page/6937059}
 }
 
 @article{cjb1887lac,
@@ -539,7 +543,9 @@
 	title={Conférence à la société belge de Microscopie: les Globules polaires de l'Ascaris clavata...},
 	year={1887},
 	journal={La cellule. Recueil de Cytologie et d'histologie générale},
-	volume={3}
+	volume={3},
+    pages={227},
+    url={http://www.biodiversitylibrary.org/page/6937305}
 }
 
 @article{cv1886cr,
@@ -605,7 +611,8 @@
 	year={1886},
 	journal={La cellule. Recueil de Cytologie et d'histologie générale},
 	volume={2},
-	pages={245}
+	pages={245},
+    url={http://www.biodiversitylibrary.org/page/6924631}
 }
 
 @article{dj1888anz,
@@ -1568,7 +1575,8 @@ Centralnervensystem und der Retina bei Natterembryonen.},
     year={1887},
     journal={La Cellule},
     volume={3},
-    pages={333}
+    pages={333},
+    url={http://www.biodiversitylibrary.org/page/6937415}
     }
 
 @article{mi1874vnb,
@@ -1776,6 +1784,93 @@ Centralnervensystem und der Retina bei Natterembryonen.},
     pages={54},
     url={http://www.biodiversitylibrary.org/page/13052380}
     }
+
+@book{pf1863,
+    author={Pflüger, Ed.},
+    title={Ueber die Eierstöcke der Säugethiere und des Menschen},
+    year={1863},
+    publisher={W. Engelmann},
+    address={Leipzig},
+    url={http://openlibrary.org/works/OL236180W}
+    }
+
+@article{pl1885ama,
+    author={Platner, G.},
+    title={Ueber die Entstehung des Nebenkerns und seine Beziehung zur Kerntheilung.},
+    year={1885},
+    journal={Arch. mikr. Anat.},
+    volume={26},
+    number={1},
+    pages={343},
+    doi={10.1007/BF02954591}
+    }
+
+@article{pl1886ama,
+    author={Platner, G.},
+    title={Ueber die Befruchtung bei Arion empiricorum.},
+    year={1886},
+    journal={Arch. mikr. Anat.},
+    volume={27},
+    pages={32},
+    url={http://www.biodiversitylibrary.org/page/13992580}
+    }
+
+@article{pl1886mah,
+    author={Platner, G.},
+    title={Die Karyokinese bei den Lepidopteren als Grundlage für eine Theorie der Zelltheilung.},
+    year={1886},
+    journal={Internat. Monatsschrift f. Anat. u. Histol. },
+    volume={3},
+    pages={341},
+    url={http://www.biodiversitylibrary.org/page/35654264}
+    }
+
+@article{po1885fm,
+    author={Podwyssozki, W.},
+    title={Ueber die Regeneration der Epithelien der Leber, der Niere, der Speichel- und Meibom'schen Drüsen unter pathologischen Bedingungen.},
+    year={1885},
+    journal={Fortschritte der Medicin},
+    volume={3},
+    pages={630}
+    }
+
+@article{pr1886lc,
+    author={Prenant, A.},
+    title={Observations cytologiques sur les éléments séminaux de la Scolopendre et de la Lithobie.},
+    year={1886},
+    journal={La Cellule},
+    volume={3},
+    pages={413},
+    url={http://www.biodiversitylibrary.org/page/6937505}
+    }
+
+@article{pr1887lc1,
+    author={Prenant, A.},
+title={Observations cytologiques sur les éléments séminaux des Gastéropodes pulmonés.},
+    year={1887},
+    journal={La Cellule},
+    volume={4},
+    pages={137},
+    url={http://www.biodiversitylibrary.org/page/7326385}
+    }
+
+@article{pr1887lc2,
+    author={Prenant, A.},
+title={Observations cytologiques sur les éléments séminaux des Reptiles.},
+    year={1887},
+    journal={La Cellule},
+    volume={4},
+    pages={181},
+    url={http://www.biodiversitylibrary.org/page/7326433}
+    }
+
+@book{pu1825,
+    author={Purkyně, J.E.},
+    title={Symbolae ad ovi avium historiam ante incubationem},
+    year={1825},
+    url={http://openlibrary.org/works/OL4705898W}
+    }
+
 
 
 
