--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -1626,6 +1626,7 @@ Centralnervensystem und der Retina bei Natterembryonen.},
     year={1848},
     journal={Arch. f. Naturgesch.},
     volume={14},
+    number={1},
     pages={1},
     url={http://www.biodiversitylibrary.org/page/6923105}
     }
@@ -1870,6 +1871,139 @@ title={Observations cytologiques sur les éléments séminaux des Reptiles.},
     year={1825},
     url={http://openlibrary.org/works/OL4705898W}
     }
+
+@article{ra1885mj,
+    author={Rabl, K.},
+    title={Ueber Zelltheilung.},
+    year={1885},
+    journal={Morphol. Jahrb.},
+    volume={10},
+    pages={214},
+    url={http://www.biodiversitylibrary.org/page/13028134}
+    }
+
+@article{ra1875lh,
+    author={Ranvier, L.},
+    title={Recherches sur les éléments du Sang.},
+    year={1875},
+    journal={Travaux du Laboratoire d'histologie},
+    pages={1}
+    }
+
+@article{ra1848an,
+    author={Rathke, H.},
+    title={Zur Kenntniss des Furchungsprocesses im Schneckeneie.},
+    year={1848},
+    journal={Arch. f. Naturgesch.},
+    volume={14},
+    number={1},
+    pages={157},
+    url={http://www.biodiversitylibrary.org/page/6923261}
+    }
+
+@article{rb1886ama,
+    author={Rauber, A.},
+    title={Die Kerntheilungsfiguren im Medullarrohr der Wirbelthiere. I. Die Batrachier.},
+    year={1886},
+    journal={Arch. mikr. Anat.},
+    volume={26},
+    pages={622},
+    url={http://www.biodiversitylibrary.org/page/14002753}
+    }
+
+@article{rc1846aap,
+    author={Reichert, K.B.},
+    title={Der Furchungsprocess und die sog. Neubildung um Inhaltsportionen.},
+    year={1846},
+    journal={Arch. Anat. Physiol.},
+    pages={196},
+    url={http://www.biodiversitylibrary.org/page/14289031}
+    }
+
+@article{rr1881lg,
+    author={Reinke, J. \& Rodewald, H.},
+    title={Studien über das Protoplasma. I. Das Protoplasma von Aethalium septicum.},
+    year={1881},
+    journal={Untersuchungen aus dem botanischen Laboratorium der Univ. Göttingen},
+    url={http://www.archive.org/details/UntersuchungenAusDemB}
+    }
+
+@article{re1841mz,
+    author={Remak, R.},
+    title={Ueber die Entstehung der Blutkörperchen.},
+    year={1841},
+    journal={Medic. Ztg., hrsg. Verein f. Heilkunde Preussen},
+    pages={127}
+    }
+
+@article{rz1881bu,
+    author={Retzius, G.},
+    title={Studien über die Zellentheilung.},
+    year={1881},
+    journal={Biol. Untersuchungen},
+    volume={1},
+    pages={109ff}
+    }
+
+@article{ro1862jph,
+    author={Robin, Ch.},
+    title={Mémoires sur les globules polaires de l'ovule.},
+    year={1862},
+    journal={J. physiol. de l'homme et des animaux},
+    pages={149}
+    }
+
+@book{rx1883,
+    author={Roux, W.},
+    title={Ueber die Bedeutung der Kerntheilungsfiguren},
+    year={1883},
+    address={Leipzig},
+    publisher={Engelmann},
+    url={http://openlibrary.org/works/OL15265477W}
+    }
+
+@article{sb1885cr,
+    author={Sabatier, A.},
+    title={Sur la spermatogénèse des Crustacés décapodes.},
+    year={1885},
+    journal={Compt. rend.},
+    volume={100},
+    pages={391},
+    url={http://gallica.bnf.fr/ark:/12148/bpt6k3056t/f391.image}
+    }
+
+@article{sf1887nap,
+    author={Sanfelice},
+    title={Intorno alla cariocinesi delle cellule germinali dei testicolo.},
+    year={1887},
+    journal={Bollett. Soc. Naturalisti in Napoli},
+    volume={1},
+    number={1},
+    url={http://www.biodiversitylibrary.org/page/6295299}
+    }
+
+@article{sa1882ama,
+    author={Sattler, E.F.},
+    title={Die Verwendung des Lapisstiftes zur Untersuchung der Epithelien.},
+    year={1882},
+    journal={Arch. mikr. Anat.},
+    volume={21},
+    pages={672},
+    url={http://www.biodiversitylibrary.org/page/14009111}
+    }
+
+@article{sf1887mj,
+    author={Sheviakov, Vl.},
+    title={Ueber die karyokinetische Kerntheilung der Euglypha alveolata.},
+    year={1887},
+    journal={Morph. Jahrb.},
+    volume={13},
+    number={2},
+    pages={193},
+    url={http://www.biodiversitylibrary.org/page/13035423}
+    }
+
+@article{si1878cbm,
 
 
 
