--- a/waldeyer.bib
+++ b/waldeyer.bib
@@ -2004,6 +2004,166 @@ title={Observations cytologiques sur les éléments séminaux des Reptiles.},
     }
 
 @article{si1878cbm,
+    author={Schleicher, W.},
+    title={Die Knorpelzelltheilung. Ein Beitrag zur Lehre der Teilung der Gewebezellen.},
+    year={1878},
+    journal={Centralblatt f. d. med. Wissensch.},
+    volume={16},
+    pages={418},
+    note={Cv. Arch. mikr. Anat. 16(1879), 672.}
+    }
+
+@article{sn1885cr,
+    author={Schneider, A.},
+    title={Sur l'Anaplophyra circulans.},
+    year={1885},
+    journal={Comptes rendus},
+    volume={100},
+    pages={1552},
+    url={http://gallica.bnf.fr/ark:/12148/bpt6k3056t/f1552.image}
+    }
+
+@book{sn1883,
+    author={Schneider, A.},
+    title={Das Ei und seine Befruchtung},
+    year={1883},
+    address={Breslau},
+    publisher={Kern},
+    url={http://openlibrary.org/works/OL16502386W}
+    }
+
+@article{sl1888ama,
+    author={Schottländer, J.},
+    title={Ueber Kern- und Zelltheilungsvorgänge in dem Endothel der entzündeten Hornhaut.},
+    year={1888},
+    journal={Arch. mikr. Anat.},
+    volume={31},
+    pages={426},
+    url={http://www.biodiversitylibrary.org/page/14147331}
+    }
+
+@article{sz1887zwz,
+    author={Schultze, O.},
+    title={Untersuchungen über die Reifung und Befruchtung des Amphibien-Eies. I.},
+    year={1887},
+    journal={Z. wiss. Zool.},
+    volume={45},
+    pages={77}
+    }
+
+@article{sz1887sbw,
+    author={Schultze, O.},
+    title={Ueber die Karyokinese in den ersten Zellen (Furchungskugeln) des Axolotl.},
+    year={1887},
+    journal={Sitzber. phys.-med. Ges. Würzburg},
+    pages={2},
+    note={ibid. p.4.}
+    }
+
+@article{sc1875ama,
+    author={Schultze, F.E.},
+    title={Rhizopodienstudien, V.},
+    year={1875},
+    journal={Arch. mikr. Anat.},
+    volume={11},
+    pages={583},
+    note={(592)},
+    url={http://www.biodiversitylibrary.org/page/13278935}
+    }
+
+@book{sz1887,
+    author={Schwarz, F.},
+    title={Die morphologische und chemische Zusammensetzung des Protoplasmas},
+    year={1887},
+    publisher={Kern},
+    address={Breslau},
+    url={http://openlibrary.org/works/OL16502580W}
+    }
+
+@book{sl1878,
+    author={Selenka, E.},
+    title={Zoologische Studien. I. Befruchtung des Eies von Toxopneustes variegatus. Ein Beitrag zur Lehre von der Befruchtung und Eifurchung},
+    year={1878},
+    publisher={Engelmann},
+    address={Leipzig},
+    url={http://openlibrary.org/works/OL16334491W}
+    }
+
+@article{sm1883ama,
+    author={Simanowsky, N.},
+    title={Ueber die Regeneration des Epithels der wahren Stimmbänder.},
+    year={1883},
+    journal={Arch. mikr. Anat.},
+    volume={22},
+    pages={710},
+    url={http://www.biodiversitylibrary.org/page/13896506}
+    }
+
+@book{sp1786,
+    author={Spallanzani, L.},
+    title={Opuscoli di fisica animale, e vegetabile},
+    year={1776},
+    publisher={Presso la Societa' Tipografica},
+    address={Modena},
+    volume={2},
+    url={http://openlibrary.org/works/OL1473808W}
+    }
+
+@article{st1887aap,
+    author={Stolnikow},
+    title={Vorgänge in den Leberzellen, insbesondere bei der Phosphorvergiftung.},
+    year={1887},
+    journal={Arch Anat. Physiol.},
+    pages={1}
+    }
+
+@book{sb1876,
+    author={Strasburger, Ed.},
+    title={Zellbildung und Zelltheilung},
+    year={1876},
+    publisher={H. Dabis},
+    address={Jena},
+    note={3. Aufl. 1880.},
+    url={http://openlibrary.org/works/OL1461391W}
+    }
+
+@book{sb1888,
+    author={Strasburger, Ed.},
+    title={Ueber Kern- und Zelltheilung im Pflanzenreiche / nebst einem Anhange über Befruchtung},
+    year={1888},
+    publisher={Fischer},
+    address={Jena},
+    url={http://openlibrary.org/works/OL1461391W}
+    }
+
+@article{sb1882ama,
+    author={Strasburger, Ed.},
+    title={Ueber den Theilungsvorgang der Zellkerne und das Verhältniss der Kerntheilung zur Zelltheilung.},
+    year={1882},
+    journal={Arch. mikr. Anat.},
+    volume={21},
+    pages={476},
+    url={http://www.biodiversitylibrary.org/page/14008915}
+    }
+
+@book{sb1884,
+    author={Strasburger, Ed.},
+    title={Neue Untersuchungen über den Befruchtungsvorgang bei den Phanerogamen als Grundlage für eine Theorie der Zeugung},
+    year={1884},
+    publisher={Fischer},
+    address={Jena},
+    url={http://openlibrary.org/works/OL1461401W}
+    }
+
+@article{sb1884ama,
+    author={Strasburger, Ed.},
+    title={Die Controversen der indirecten Kerntheilung.},
+    year={1884},
+    journal={Arch. mikr. Anat.},
+    volume={23},
+    pages={246},
+    url={http://www.biodiversitylibrary.org/page/13805086}
+    }
 
 
 
